refactor : dto 수정 및 구조 개선